# resize-raccoon

./: .gitignore  README.md  latest_version.json  package.json  tailwind.config.js  vite.config.ts
docs/: CHANGELOG.md  ROADMAP.md
src/: .prettierrc.json  App.tsx  boot.ts  constants.ts  global.css  main.tsx  styles.css
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug_utils.rs  errors.rs  main.rs
src-tauri/src/commands/: mod.rs  process_commands.rs  profile_commands.rs  settings_commands.rs
src-tauri/src/operations/: process.rs  profile.rs  user_settings.rs  window_manager.rs
src-tauri/src/setup/: events.rs  init.rs  ipc.rs  state.rs  tray.rs
src/components/: LoadingButton.tsx  ProfileList.tsx  ProfileListItem.tsx  SettingsMenu.tsx
src/components/profile-editor/: FormControl.tsx  ProcessSelector.tsx  ProfileEditorFooter.tsx  ProfileEditorHeader.tsx
src/components/styles/: Card.tsx
src/components/toast/: ToastSystem.tsx  toast.icons.tsx  toast.types.ts
src/locales/: en.ts
src/screens/: HomeScreen.tsx  ProfileEditor.tsx
src/state/: appVersionState.ts  bootState.ts  profileState.ts  screenState.ts  settingsState.ts
src/types/: PresetType.ts  ProcessType.ts  ProfileTypes.ts  ScreenTypes.ts  SettingsType.ts
src/utils/: backend.ts  caseConvert.ts
src/utils/i18n/: TranslationKeys.ts  i18n.ts  translate.ts  useTranslation.ts
